# CoffeeMine

./: .gitignore  .gitmodules  .travis.yml  README.md  package-lock.json  package.json  pom.xml
.vaadin/designer/: project-settings.json
frontend/JSONValidator/: CMakeLists.txt
frontend/src/: Collapsible.js  HorizontalScroll.js  JSONUploadSection.html  JSONUploadSection.js
frontend/styles/: material-full-calendar.css  shared-styles.css
src/main/JSONValidator/: CMakeLists.txt  README.md  module.cxx
src/main/java/org/coffeemine/app/spring/: AccountPopUp.java  AddProjectDialog.java  Application.java  AuthView.java  BarChart.java  Calendar.java  CalendarComponent.java  CalendarController.java  CalendarForm.java  CalendarView.java  EventCreation.java  LetterIcon.java  MainView.java  MessageBean.java  Overview.java  ProtectedView.java  RadialBarChart.java  RoutingTabs.java  SideBar.java  SprintCreation.java  Statistics.java  StatisticsCalculation.java  TaskCreation.java  Taskbox.java  TestingData.java  TopBar.java  UserProfile.java  UserProfileComponent.java  View.java
src/main/java/org/coffeemine/app/spring/annonations/: NavbarRoutable.java  Routable.java
src/main/java/org/coffeemine/app/spring/auth/: AccessControl.java  BasicAccessControl.java  CurrentUser.java  LoginScreen.java  ProtectedView.java
src/main/java/org/coffeemine/app/spring/calendar/: Calendar.java
src/main/java/org/coffeemine/app/spring/components/: AddProjectDialog.java  BarChart.java  Collapsible.java  CreateTrackItem.java  HorizontalScroll.java  HoursLogIn.java  HoursLogging.java  JSONUploadSection.java  LetterIcon.java  ProjectList.java  RadialBarChart.java  RecentChangesView.java  RiskMatrix.java  SpaceableTextArea.java  SpaceableTextField.java  TaskBlock.java  (+3 more)
src/main/resources/: application.properties  banner.txt
src/test/java/org/coffeemine/app/spring/: AbstractViewTest.java  MainViewIT.java  OverviewIT.java
(+42 files in other folders)
